# r-ui

./: Cargo.toml  README.en.md  README.md  package-lock.json
examples/: action.rs  hello.rs  hello2.rs  hello3.rs  hello4.rs  hello5.rs  html_generate.rs  sniff_console.rs  sniff_ui.rs  str_as_file.rs  str_as_file_ui.rs  utils_exm.rs
src/: action.rs  lib.rs  net.rs  proxy.rs  template.rs  utils.rs  view.rs  widgets.rs
src/lib/: view.rs
src/template/: base64.min.js  default.css  default.js  index.html  package-lock.json  progress.html
