[package]
name = "r-ui"
version = "0.1.0"
authors = ["Qingluan <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
chrono = "0.4.9"
colog = {git = "https://github.com/chrivers/rust-colog" }
colored = "1.8"
web-view = "0.5.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2"
regex = "1.3.1"
dirs = "2.0"
lazy_static = "1.4.0"
threadpool = "1.7.1"
encoding = "0.2.33"
reqwest = "0.9.22"
httparse = "1.3.4"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12"
mime = "0.3"
futures = "0.1"
crossbeam = "0.7"
crossbeam-channel = "0.3"
base64 = "0.11.0"